[build-system]
requires = ["setuptools>=61.0.0"]
build-backend = "setuptools.build_meta"

[project]
name = "commit-reviewer"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "click",
    "gitpython",
    "requests",
    "rich",
    "python-dotenv",
]

[project.scripts]
review-commits = "review_commits.cli:main"
